--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="appbar_image_height">256dp</dimen>
+    <dimen name="news_title_bar">50dp</dimen>
+    <dimen name="news_title_size">24sp</dimen>
+    <dimen name="news_title_more_size">16sp</dimen>
+    <dimen name="news_child_size">12sp</dimen>
 </resources>
